--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -176,12 +176,14 @@
         <item>@string/status_bar_battery_percentage_default</item>
         <item>@string/status_bar_battery_percentage_text_inside</item>
         <item>@string/status_bar_battery_percentage_text_next</item>
+        <item>@string/battery_percentage_percentage_estimate</item>
     </string-array>
 
     <string-array name="battery_percent_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 
     <!-- Battery -->
