--- a/res/xml/lockscreen.xml
+++ b/res/xml/lockscreen.xml
@@ -56,6 +56,13 @@
         android:summary="@string/lockscreen_visualizer_summary"
         android:fragment="com.aosip.owlsnest.lockscreen.LockScreenVisualizer" />
 
+    <com.superior.settings.preferences.SecureSettingSwitchPreference
+        android:key="hide_lockicon"
+        android:title="@string/hide_lockicon_title"
+        android:summary="@string/hide_lockicon_summary"
+        android:defaultValue="false" />
+
+
     <PreferenceCategory
         android:key="album_art_category"
         android:title="@string/media_art_title" >
